--- a/tensorflow-serving-api/meta.yaml
+++ b/tensorflow-serving-api/meta.yaml
@@ -12,11 +12,11 @@ source:
      - 0001-TF-Build-fixed.patch                 # [ppc64le and ppc_arch == 'p10']
 
 build:
-  number: 1
+  number: 2
   string: py_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }}
   noarch: python
   script_env:        #[ppc_arch == 'p10']
-    - GCC_11_HOME    #[ppc_arch == 'p10']
+    - GCC_HOME    #[ppc_arch == 'p10']
 
 requirements:
   build:
