--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -12,12 +12,12 @@ source:
      - 0001-Fix-P10-build.patch      #[ppc_arch == "p10"]
  
 build:
-  number: 2
+  number: 3
   string: h{{ PKG_HASH }}_{{ build_type }}_py{{ python | replace(".", "") }}_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }} # [build_type == 'cpu'] 
   string: h{{ PKG_HASH }}_{{ build_type }}{{ cudatoolkit | replace(".*", "") }}_py{{ python | replace(".", "") }}_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }} # [build_type == 'cuda']
   script_env:
     - CUDA_HOME                 #[build_type == 'cuda']
-    - GCC_11_HOME               #[ppc_arch == 'p10']
+    - GCC_HOME               #[ppc_arch == 'p10']
 
 requirements:
   build:
