--- a/tensorflow-serving-api/meta.yaml
+++ b/tensorflow-serving-api/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "2.13.0" %}
+{% set version = "2.14.1" %}
 
 package:
    name: tensorflow-serving-api
@@ -9,10 +9,10 @@ source:
    git_rev: {{ version }}
    patches:
      - 0001-Replace-k8-with-ppc-for-Power-builds.patch # [ppc64le]
-     - 0001-TF-Build-fixed.patch                 # [ppc64le and ppc_arch == 'p10']
+     - 0001-TF-Build-fixed.patch                 #[ppc_arch == "x86"]
 
 build:
-  number: 2
+  number: 1
   string: py_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }}
   noarch: python
   script_env:        #[ppc_arch == 'p10']
